--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,54 @@
-absl-py @ file:///opt/concourse/worker/volumes/live/038c7640-529d-45f3-464f-ee37f5e0f4eb/volume/absl-py_1623867246969/work
+absl-py==0.13.0
 astor==0.8.1
+autopep8==1.5.7
 Bottleneck==1.3.2
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
+cached-property==1.5.2
 certifi==2021.10.8
-click @ file:///tmp/build/80754af9/click_1621604852318/work
-coverage @ file:///opt/concourse/worker/volumes/live/4f1a5e30-f675-4496-6570-bc6669a34f2a/volume/coverage_1614614860186/work
-Cython @ file:///opt/concourse/worker/volumes/live/432fe198-1725-458b-4530-7523a5e3de1a/volume/cython_1626256963932/work
-Flask @ file:///tmp/build/80754af9/flask_1634118196080/work
+click==8.0.1
+coverage==5.5
+Cython==0.29.24
+Flask==2.0.2
 gast==0.2.2
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-grpcio @ file:///opt/concourse/worker/volumes/live/4f7ebd3c-7c5e-48f7-6ff5-de127acdc0d8/volume/grpcio_1614884166576/work
+google-pasta==0.2.0
+grpcio==1.36.1
 h5py==2.10.0
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/f3c3a723-0733-424b-6c0e-af69ac95b59a/volume/importlib-metadata_1631916705096/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
 keras==2.6.0
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
+Keras-Applications==1.0.8
 keras-embed-sim==0.9.0
 keras-layer-normalization==0.15.0
 keras-multi-head==0.28.0
 keras-pos-embd==0.12.0
 keras-position-wise-feed-forward==0.7.0
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
+Keras-Preprocessing==1.1.2
 keras-self-attention==0.50.0
 keras-transformer==0.39.0
-Markdown @ file:///opt/concourse/worker/volumes/live/255f8945-2411-4469-7c82-a749af3aef33/volume/markdown_1614363822772/work
-MarkupSafe @ file:///opt/concourse/worker/volumes/live/2165c944-5d03-464f-57c1-1df4e51b3ac3/volume/markupsafe_1621528146825/work
+Markdown==3.3.4
+MarkupSafe==2.0.1
 mkl-fft==1.3.0
-mkl-random @ file:///opt/concourse/worker/volumes/live/133f1d0b-8fd8-4fa0-679e-7214401cbd75/volume/mkl_random_1626186083386/work
+mkl-random==1.2.2
 mkl-service==2.4.0
-numexpr @ file:///opt/concourse/worker/volumes/live/6bbc9b0e-ade0-40db-6ee6-74c979385fbb/volume/numexpr_1618856531941/work
-numpy @ file:///opt/concourse/worker/volumes/live/046e897c-3622-47d5-79cf-02f72d341f0d/volume/numpy_and_numpy_base_1634106712173/work
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
+numexpr==2.7.3
+numpy==1.21.2
+opt-einsum==3.3.0
 pandas==1.3.3
+pip==21.0.1
 protobuf==3.17.2
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pycodestyle==2.7.0
+python-dateutil==2.8.2
 pytz==2021.3
-scipy @ file:///opt/concourse/worker/volumes/live/4eabb14c-0fb3-4254-5fd3-317c14f470de/volume/scipy_1630606815835/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
+scipy==1.7.1
+setuptools==58.0.4
+six==1.16.0
 tensorboard==2.0.0
 tensorflow==2.0.0
 tensorflow-estimator==2.0.0
 termcolor==1.1.0
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
-Werkzeug @ file:///tmp/build/80754af9/werkzeug_1631818832573/work
+toml==0.10.2
+typing-extensions==3.10.0.2
+Werkzeug==2.0.1
+wheel==0.37.0
 wrapt==1.12.1
-zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
+zipp==3.6.0
